--- a/main.bib
+++ b/main.bib
@@ -3391,3 +3391,12 @@
   volume       = 9,
   number       = 11
 }
+@article{van2008visualizing,
+  title        = {Visualizing Data using t-SNE},
+  author       = {{von der Malsburg}, Christoph and Bienenstock, Elie L.},
+  year         = 1987,
+  journal      = {Europhysics Letters},
+  volume       = 3,
+  number       = 11
+}
+ @article{Lades_Vorbruggen_Buhmann_Lange_vonderMalsburg_Wurtz_Konen_1993, title={Distortion invariant object recognition in the dynamic link architecture}, volume={42}, ISSN={00189340}, DOI={10.1109/12.210173}, number={3}, journal={IEEE Transactions on Computers}, author={Lades, M. and Vorbruggen, J.C. and Buhmann, J. and Lange, J. and von der Malsburg, C. and Wurtz, R.P. and Konen, W.}, year={1993}, month={Mar}, pages={300–311} }
