--- a/tex/future_work.tex
+++ b/tex/future_work.tex
@@ -10,31 +10,154 @@ The most promising concepts identified in this work for improving deep learning 
 
 
 \section{Implemented Models}\seclbl{future_so}
-The concepts from neuroscience are implemented in two specific ways; these are called horizontal and vertical self-organisation. It is important to note that the implementation of \emph{neuroscientific concepts} is the main focus of this thesis and not to push scores like accuracy on benchmarks. In general, a comparison with end-to-end backpropagation of error is not appropriate in this field: Backpropagation has been optimised for over 30 years by many institutes and even more researchers, and therefore alternative learning concepts cannot be expected to outperform backpropagation of error instantly. Thus, backpropagation of error is not considered an appropriate baseline.
+The concepts from neuroscience are implemented with two model based on horizontal and vertical self-organisation. It is important to note that the implementation of \emph{neuroscientific concepts} is the main focus of this thesis and not to push scores like accuracy on benchmarks. In general, a comparison with end-to-end backpropagation of error is not appropriate in this field: Backpropagation has been optimised for over 30 years by many institutes and even more researchers, and therefore alternative learning concepts cannot be expected to outperform backpropagation of error instantly. Thus, backpropagation of error is not considered an appropriate baseline.
 
 Rather, the proposed implementations showcase interesting neuroscientific concepts. However, the implementation has not yet been optimised and incorporated in big networks that might perform on the level of existing systems. Rather, these implementations are to be understood as a basis for future work (c.f. \secref{future_3_stage}, \secref*{useful_representations} and \secref*{cognition_reasoning}) that improves AI in the long-term.
 
 
 \subsection{Horizontal Self-Organisation}\seclbl{future_hso}
-TODO: this section is not yet complete, as many experiments are still ongoing...
+The proposed horizontal self-organisation model incorporates neuroscientific findings. One very important function of the brain is its self-organisation. Self-organisation is implemented by a novel proxy objective function. Models based on proxy objective functions are biologically more plausible and a hot research topic (c.f. \secref{alt_train_algo}). Recently, many algorithms have been proposed, such as the forward-forward algorithm \sidecite{ff_algo}, which have caused a stir in the community by challenging the classical backpropagation of error as an optimisation algorithm. However, despite the fact that algorithms using proxy objective functions are biologically more plausible, these algorithms are still inferior to models trained with end-to-end backpropagation of error on well-known tasks such as classification. 
 
-The proposed horizontal self-organisation approach uses a novel proxy objective function. Models based on proxy objective functions are biologically more plausible and a hot research topic (c.f. \secref{alt_train_algo}). Recently, many algorithms have been proposed, such as the forward-forward algorithm \sidecite{ff_algo}, which have caused a stir in the community by challenging the classical backpropagation of error as an optimisation algorithm. However, despite the fact that algorithms using proxy objective functions are biologically more plausible, these algorithms do not provide many benefits yet. Models trained with backpropagation of error are still superior, especially on well-known tasks such as classification. One of the author's hope was that such algorithms have other advantages, such as better robustness. However, evaluating the models presented in this work and other models, such as the forward-forward algorithm, has crushed this initial belief: No model that uses proxy objective function achieved better results on the corrupted MNIST-C dataset than end-to-end backpropagation of error.
+The model based on horizontal self-organisation can predict class labels based on a voting between all layers.
+It achieves an accuracy of $82.8\%$ on MNIST and is thus significantly inferior to the model with end-to-end backpropagation, which achieves an accuracy of $98.2\%$. However, incorporating further neuroscientific findings improves the result significantly: for example, the brain stores multiple views of the same object in its memory\sidenote{for example, we know how a cow looks like from the front and the side, even though these views are very different}. This concept is implemented by using several prototypes of each class. This improved MNIST classification accuracy from $82.8\%$ to $96.8\%$, bringing the model close to the performance of end-to-end backpropagation of error. Another implemented neuroscientific insight is the use of lateral connections: Lateral connections are interpreted as recurrent connections and increase the accuracy on MNIST from $82.8\%$ to $94.8\%$. Interestingly, combining lateral connections with more prototypes does not improve the result; both methods applied simultaneously achieve an accuracy of $93.4\%$ on MNIST. Despite numerous investigations, the exact reason for this could not be determined, and this problem needs to be tackled in future work.
 
-For classification, a sample is compared to the average activation of each class. This average activation can be understood as an object prototype within a world model. Thus, it is compared to which prototype a sample fits best. The problem is that a single object prototype is not sufficient. As an example, \figref{digit_4_versions} shows different versions of the digit $4$ that can be found in the MNIST dataset. This shows that a digit can be written in different ways\sidenote{this applies to all kinds of datasets: Most objects can have various visual characteristics (size, colour, shape) or look different from different viewpoints}.
-Consequently, the digits and, thus, the activations look different for samples from the same class, and the use of more than one prototype per class seems helpful. Thus, instead of calculating the average activation per class, it could help to divide the activations per class into representative groups using a hierarchical clustering algorithm and to calculate the average activation (i.e. the cluster centre) per group. By doing so, multiple representative prototypes per class are obtained, and the prediction could become a lot more accurate.
+The model with horizontal self-organisation performs similarly well than end-to-end backpropagation of errors on the MNIST dataset. However, the performance is much worse on the MNIST-C dataset ($76.4\%$ vs. $87.7\%$), which contains samples outside the distribution. This inferiority could be due to how representations are extracted: All neuronal activations are included in the prototypes without noise filtering. Additional classification heads could diminish this issue (cf. \secref{hso_results_backprop}). 
+
+The generated representations have so far only been examined for classification. However, since the objective function does not explicitly optimise the model for classification, it would be interesting to investigate what other information is contained in the representations. Furthermore, the representations are currently generated with a supervised approach since the labels are used in the loss function. However, the use of labels is generally not desirable because the manual creation of labels is labour-intensive. Moreover, it is known that the brain also learns unsupervised to a large extent and is thus biologically more plausible.
+Thus, the implementation of a loss function that does not rely on labels would be beneficial. Furthermore, the model should be tested on other datasets than MNIST and MNIST-C to evaluate how well it can scale.
+
+A criticism of the proposed model is that it does not learn hierarchical features, even though hierarchical features are one of the main reasons for the excellent performance of deep learning systems. The loss enforces in each layer that the latent representations of objects of the same class are similar and that the representations of different classes are different. This violates the concept of hierarchical features; the first layers should learn general features that are helpful for all classes but cannot necessarily be assigned to a specific class. Only later layers build class representations that are specific to a class. In the current setting, however, already the first layers generate class-specific representations.
+
+In the following, two possible measures are described to counteract this problem in future work: (i) The fully connected layers could be replaced by convolutional layers so that the first layers have a smaller field of view and can only recognise local features. Only later layers have a larger field of view and can thus extract global features. Therefore, using a CNN might alleviates the problem of non-hierarchical features. (ii) A hierarchy of features can also be built by feeding specific information in the form of the input image into the network from one side, and feeding general information in the form of class labels into the network from the other side. These two types of information can be fused within the network. Thus, the training process enforces a hierarchy by fusing specific and general information over multiple layers.
+
+This bidirectional information flow is inspired by the forward-forward (FF) algorithm \sidecite{ff_algo} (c.f. \secref{alt_train_algo}).
+In the FF algorithm, the image is fed into the input layer of the network, and the corresponding label is fed into the output layer of the network. The image remains static for several timesteps, and the network is trained to push the layer's activations above a certain threshold. In the second stage, the image is fed into the network with the wrong label and the network is trained to push the activations below a certain threshold. It is found that a feature hierarchy is created when low-level features (i.e. images) are fed into the network from one end and high-level features (i.e. class labels) are fed into the network from the other end. However, this approach has one major disadvantage: During inference, each possible sample-label combination has to be fed into the model, and the label that caused the highest neural activity is used as the model's prediction.
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.49\textwidth]{digit_4_versions}
-    \caption[Different versions of the digit ``$4$'' in the MNIST dataset]{Different versions of the digit ``$4$'' in the MNIST dataset.}
-    \figlbl{digit_4_versions}
+    \includegraphics[width=0.99\textwidth]{mi_loss}
+    \caption[Horizontal self-organisation with mutual information loss]{Horizontal self-organisation with mutual information loss: Each layer maximises the mutual information (MI) between its activations and the activations of the previous and subsequent layers. The first layer maximises the MI between its activations and the input image (instead of the previous layer), and the last layer maximises the MI between its activations and the image label (instead of the subsequent layer).}
+    \figlbl{mi_loss}
 \end{figure}
 
-
-The generated representations have so far only been examined for classification. However, since the objective function does not explicitly optimise the model for classification, it would be interesting to investigate what other information is contained in the representations. Furthermore, the representations are currently generated with a supervised approach since the labels are used in the loss function. However, the use of labels is generally not desirable because the manual creation of labels is labour-intensive. On the other hand, an unsupervised (or self-supervised) approach extracts features without labels. Moreover, it is known that the brain also learns unsupervised to a large extent and is thus biologically more plausible.
-Thus, the implementation of a loss function that does not rely on labels would be beneficial. Furthermore, the model should be tested on other datasets than MNIST to evaluate how well it can scale.
+In the following, an alternative is proposed which does not have this disadvantage: Identical to the FF algorithm, the image is fed into the network's input layer for multiple timesteps. Conversely, the label is not fed directly into the output layer but is made available to the last layer within the loss function. Each layer maximises the mutual information (MI)\sidenote{or another metric to measure the similarity between activations} between its activations and the activations of the previous and subsequent layers. Thus, the first layer maximises the MI between the input image and its activations, and the last layer maximises the MI between its activations and a label vector. This creates a feature pyramid in which a smooth transition from concrete samples to abstract class labels is learned. During inference, each layer produces a class specific activation pattern, and the last layer directly predicts latent representations that can be assigned to a class. This process is visualised in \figref{mi_loss}.  However, the effectiveness of the proposed measures have to be evaluated in future work.
 
 
+%\subsubsection{Convolutional Architecture}
+%In a CNN, the field of view in the first layers is restricted by design but becomes larger in subsequent layers. Consequently, using a CNN architecture instead of a model based on fully connected layers alleviates the problem of non-hierarchical features.
+%
+%
+%\begin{figure}[h]
+%    \centering
+%    \resizebox{0.99\textwidth}{!}
+%{
+%\begin{tikzpicture}
+%\tikzstyle{connection}=[ultra thick,every node/.style={sloped,allow upside down},draw=\edgecolor,opacity=0.7]
+%\tikzstyle{copyconnection}=[ultra thick,every node/.style={sloped,allow upside down},draw={rgb:blue,4;red,1;green,1;black,3},opacity=0.7]
+%
+%
+%\node[canvas is zy plane at x=0] (input) at (0,0,0) {\includegraphics[width=8cm,height=8cm]{imgs/mnist.jpeg}};
+%
+%
+%\pic[shift={(3,0,0)}] at (input) 
+%    {Box={
+%        name=conv1,
+%        caption=Conv + ReLU,
+%        xlabel={{1, }},
+%        zlabel=16,
+%        fill=\ConvColor,
+%        height=16,
+%        width=2,
+%        depth=16
+%        }
+%    };
+%
+%
+%\draw [connection]  (input) ++(0,0,0)    -- node {\midarrow} (conv1-west);
+%
+%
+%\pic[shift={ (0,0,0) }] at (conv1-east) 
+%    {Box={
+%        name=pool1,
+%        caption= ,
+%        fill=\PoolColor,
+%        opacity=0.5,
+%        height=8,
+%        width=1,
+%        depth=8
+%        }
+%    };
+%
+%
+%\pic[shift={(2,0,0)}] at (pool1-east) 
+%    {Box={
+%        name=conv2,
+%        caption=Conv + ReLU,
+%        xlabel={{16, }},
+%        zlabel=32,
+%        fill=\ConvColor,
+%        height=8,
+%        width=4,
+%        depth=8
+%        }
+%    };
+%
+%
+%\draw [connection]  (pool1-east)    -- node {\midarrow} (conv2-west);
+%
+%
+%\pic[shift={ (0,0,0) }] at (conv2-east) 
+%    {Box={
+%        name=pool2,
+%        caption= ,
+%        fill=\PoolColor,
+%        opacity=0.5,
+%        height=4,
+%        width=1,
+%        depth=4
+%        }
+%    };
+%
+%
+%\pic[shift={(2,0,0)}] at (pool2-east) 
+%    {Box={
+%        name=conv3,
+%        caption=Conv + ReLU,
+%        xlabel={{32, }},
+%        zlabel=64,
+%        fill=\ConvColor,
+%        height=4,
+%        width=6,
+%        depth=4
+%        }
+%    };
+%
+%
+%\draw [connection]  (pool2-east)    -- node {\midarrow} (conv3-west);
+%
+%
+%\end{tikzpicture}
+%}
+%    \caption[Architecture of the CNN for horizontal self-organisation]{The network architecture of the CNN for horizontal self-organisation with fully connected layers.}
+%    \figlbl{horizontal_org_arch2}
+%\end{figure}
+%
+%The CNN architecture used in this thesis is shown in \figref{horizontal_org_arch2}.
+%Three convolutional layers with ReLU activation functions and with $16$, $32$, and $64$ channels are used, and max-pooling layers are applied between each convolutional layer. For training, the same hyperparameters and loss functions are used for the model with fully connected layers.
+
+
+%\subsubsection{Two-Way Information Flow}
+%Hinton \sidecite{ff_algo} introduced with the forward-forward (FF) algorithm (c.f. \secref{alt_train_algo}) a promising idea for models based on proxy objective functions: 
+%The image is fed into the input layer of the network, and the corresponding label is fed into the output layer of the network. The image remains static for several timesteps, and the network is trained to push the layer's activations above a certain threshold. In the second stage, the image is fed into the network with the wrong label and the network is trained to push the activations below a certain threshold. He found that a feature hierarchy is created when low-level features (i.e. images) are fed into the network from one end and high-level features (i.e. class labels) are fed into the network from the other end. However, this approach has one major disadvantage: During inference, each possible sample-label combination has to be fed into the model, and the label that caused the highest neural activity is used as the model's prediction.
+
+%In this thesis, this process is implemented in a different way, which does not have this disadvantage. Identical to the FF algorithm, the image is fed into the network's input layer for multiple timesteps. Conversely, the label is not fed directly into the output layer but is made available to the last layer within the loss function. Each layer maximises the mutual information (MI) between its activations and the activations of the previous and subsequent layers. Thus, the first layer maximises the MI between the input image and its activations, and the last layer maximises the MI between its activations and a label vector. This creates a feature pyramid in which a smooth transition from concrete samples to abstract class labels is learned. During inference, the last layer directly predicts latent representations that can be assigned to a class. This process is visualised in \figref{mi_loss}. 
+
+%\begin{figure}[h]
+%    \centering
+%    \includegraphics[width=0.99\textwidth]{mi_loss}
+%    \caption[Horizontal self-organisation with mutual information loss]{Horizontal self-organisation with mutual information loss: Each layer maximises the mutual information (MI) between its activations and the activations of the previous and subsequent layers. The first layer maximises the MI between its activations and the input image (instead of the previous layer), and the last layer maximises the MI between its activations and the image label (instead of the subsequent layer).}
+%    \figlbl{mi_loss}
+%\end{figure}
 
 
 \subsection{Vertical Self-Organisation}\seclbl{future_vso}
