--- a/main.bib
+++ b/main.bib
@@ -3400,3 +3400,5 @@
   number       = 11
 }
  @article{Lades_Vorbruggen_Buhmann_Lange_vonderMalsburg_Wurtz_Konen_1993, title={Distortion invariant object recognition in the dynamic link architecture}, volume={42}, ISSN={00189340}, DOI={10.1109/12.210173}, number={3}, journal={IEEE Transactions on Computers}, author={Lades, M. and Vorbruggen, J.C. and Buhmann, J. and Lange, J. and von der Malsburg, C. and Wurtz, R.P. and Konen, W.}, year={1993}, month={Mar}, pages={300–311} }
+
+ @article{Bienenstock_vonderMalsburg_1987, title={A Neural Network for Invariant Pattern Recognition}, volume={4}, ISSN={0295-5075, 1286-4854}, DOI={10.1209/0295-5075/4/1/020}, number={1}, journal={Europhysics Letters (EPL)}, author={Bienenstock, Elie and {von der Malsburg}, Christoph}, year={1987}, month={Jul}, pages={121–126} }
