--- a/tex/related_work.tex
+++ b/tex/related_work.tex
@@ -66,13 +66,19 @@ The resulting graph represent the entire image. However, not all pixels usually 
 An idealised version of this object's subgraph can also be stored as a prototype in the stage S$2$.
 By matching the subgraphs of an image (perceived in S$1$) and these subgraph prototypes in S$2$, the organisation of projection fibres can be formulated as a subgraph matching problem.
 
-A simplistic version of this process is implemented by \sideciteay{Lades_Vorbruggen_Buhmann_Lange_vonderMalsburg_Wurtz_Konen_1993}. They use Gabor-type wavelets as features extracted from local pixel groups in the image. In a storage phase, sparse graphs of these features are formed and stored as model prototypes. In the recognition phase, the Gabor wavelets of the perceived image are matched with the previously stored graph prototypes. Therefore, a sparse graph of the image features is adaptively formed to best match a given prototype graph. The matching process is based on adjusting one-to-one links between vertices in the model and image graphs. A cost function controls the graph adaptation by favouring similarities and penalising metric deformations. This matching process between image features and stored models is repeated for each stored model prototype. Finally, the prototype with the lowest cost is selected as the recognised model. This process is straightforward, but the sequential matching of models is biologically not plausible and slow.
+A simplistic\sidenote{simplistic in the sense that a simple matching algorithm without self-organising projection fibres is used} version of this process is implemented by \sideciteay{Lades_Vorbruggen_Buhmann_Lange_vonderMalsburg_Wurtz_Konen_1993}. They use Gabor-type wavelets as features extracted from local pixel groups in the image. In a storage phase, sparse graphs of these features are formed and stored as model prototypes. In the recognition phase, the Gabor wavelets of the perceived image are matched with the previously stored graph prototypes. Therefore, a sparse graph of the image features is adaptively formed to best match a given prototype graph. The matching process is based on adjusting one-to-one links between vertices in the model and image graphs; the model prototypes' graphs are moved over the input's graph and locally slightly deformed. A cost function controls the graph adaptation by favouring similarities and penalising metric deformations. This matching process between image features and stored models is repeated for each stored model prototype. Finally, the prototype with the lowest cost is selected as the recognised model. This process is straightforward, but the sequential matching of models is biologically not plausible and slow.
 
+Other approaches use self-organising projection fibres between the first and second stage. Similar to the previously described method, these approaches use filters to create a feature graph of the image in the first stage and implement a graph matching method to compare the image with prototype models that are stored in the second stage. However, they do not compare a prototype graph with an input graph at all positions. Instead, the prototypes graphs are connected to the input graph randomly and these connections are iteratively improved by a fast self-organising learning process in a coarse-to-fine fashion.
+\sideciteay{Bienenstock_vonderMalsburg_1987} proposed one of the first algorithms for this purpose in 1987. They used images with $100$ pixels depicting the letters A, B, or C, each image consisting of $50$ black pixels and $50$ white pixels. The black and white pixels are directly used as features, i.e. build the features of a node within a graph. The nodes of a graph are connected locally and each node has three incoming and three outgoing connections. 
+First, all $3$ prototypes are stored within a single graph. Since $3$ prototypes are stored, each node of the graph in stage $3$ has $3 \cdot 3 = 9$ connections. Afterwards, the labelled\sidenote{the labels are the information if a node is black or white} prototype graph is matched with a given input graph. This is done by adjusting a graph (that represents the connection fibres) that connects the input graph with a prototype graph so that an energy function is minimized. 
 
+\sideciteay{wiskott1996face} proposed self-organising projection fibres for face recognition. However, they so not store all all prototypes models in the same graph but in distinct graphs. They use Gabor-based wavelets to extract a two-dimensional array of features. The mapping between the image array and the stored prototype array is based synaptic plasticity and the constraint of preservation of topography to find matches. The preservation of topography is achieved with lateral connections, which are excitatory over short range and inhibitory over long range.
+The connectivity matrix is initialized using the similarities between the features of the connected neurons. ..........
+% TODO: Beschreibe dies noch genauer: Ein Blob von activity wird anhand von synaptic plasticity herumgeschoben bis ein guter match gefunden wird. Jedes Feature im Modell passt zu mehreren Stellen im Bild. Durch das Verschieben des Blobs bildet sich aber ein gutes Matching heraus oder so ähnlich -> Paper noch lesen und zusammenfassen (bisher nicht gelesen)
+However, one problem with this model is that matching takes a long time and is, therefore, impractical.
 
-
-
-
+This problem is solved by \sideciteay{Wolfrum_Wolff_Lücke_vonderMalsburg_2008}.
+% TODO: Lese A recurrent dynamic model for correspondence-based face recognition und fasse es hier zusammen
 
 
 
