--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -56,6 +56,8 @@ In \chref{horizontal_self_org} and \chref*{vertical_self_org}, two different arc
 The model described in \chref{vertical_self_org} uses vertical self-organisation by dividing the data into patches and analysing them on independent but communicating sub-models.
 Finally, in \chref{future_work}, future work is described, and some insights and intuitions of the author are given about which neuroscience concepts seem promising and which do not, and what the next steps for developing more intelligent systems could be.
 
+\section{TODO}
+Feedback Thilo: weniger Small-Scale in Thesis -> mehr Meta-Level in Introduction / eigene Theorie, evtl. Fundamentals -> mehr Neuroscience (1000 Brains, Capsule Networks, Christoph,Geoffrey Generation von Rules)
 
 
 
