--- a/tex/future_work.tex
+++ b/tex/future_work.tex
@@ -213,7 +213,7 @@ The loss function remains the same for the first output channel since the goal i
 %Afterwards, a nearest neighbour lookup is made to find the code vector most similar to $\boldsymbol{h}_e$.
 %The code-vector, also called the quantised vector $\boldsymbol{h}_q$, is fed into the decoder to reconstruct the image.
 
-
+TODO: Delete everything from here and put it into Introduction / Fundamentals!!!!
 
 \section{3-Staged Model}\seclbl{future_3_stage}
 TODO: Frame dieses Kapitel mehr so dass es klingt als wäre dies etwas on-top von VSO und HSO
